--- a/index.html
+++ b/index.html
@@ -50,6 +50,76 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="btn-menu">
+          <svg width="24" height="24" class="icon-menu">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mobile-menu">
+        <button type="button" class="menu-close-button">
+          <svg width="8" height="8" class="btn-close-icon">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="nav-wrap">
+          <ul class="menu">
+            <li>
+              <a href="./index.html#studio" class="nav-link active">Studio</a>
+            </li>
+            <li>
+              <a href="./index.html#portfolio" class="nav-link">Portfolio</a>
+            </li>
+            <li>
+              <a href="./index.html#contacts" class="nav-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="space"></div>
+        <address class="address">
+          <ul class="address-list">
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="tel:+110001111111" class="address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="social-links">
+          <li class="social-button">
+            <a href="https://www.instagram.com/" target="_blank" class="link">
+              <svg width="24" height="24" class="social-icon">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-button">
+            <a href="https://www.twitter.com/" target="_blank" class="link">
+              <svg width="24" height="24" class="social-icon">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-button">
+            <a href="https://www.facebook.com/" target="_blank" class="link">
+              <svg width="24" height="24" class="social-icon">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-button">
+            <a href="https://www.linkedin.com/" target="_blank" class="link">
+              <svg width="24" height="24" class="social-icon">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </header>
 
@@ -122,7 +192,12 @@
           <h2 class="team-title title">Our Team</h2>
           <ul class="team-list">
             <li class="team-card">
-              <img src="./images/photo_1.jpg" alt="Mark Guerrero" width="264" />
+              <img
+                src="./images/photo_1.jpg"
+                srcset="./images/photo_1.jpg 1x, ./images/photo_1_x2.jpg 2x"
+                alt="Mark Guerrero"
+                width="264"
+              />
               <div class="team-card-content">
                 <h3 class="title">Mark Guerrero</h3>
                 <p class="team-desc">Product Designer</p>
@@ -175,7 +250,12 @@
               </div>
             </li>
             <li class="team-card">
-              <img src="./images/photo_2.jpg" alt="Tom Ford" width="264" />
+              <img
+                src="./images/photo_2.jpg"
+                srcset="./images/photo_2.jpg 1x, ./images/photo_2_x2.jpg 2x"
+                alt="Tom Ford"
+                width="264"
+              />
               <div class="team-card-content">
                 <h3 class="title">Tom Ford</h3>
                 <p class="team-desc">Frontend Developer</p>
@@ -228,7 +308,12 @@
               </div>
             </li>
             <li class="team-card">
-              <img src="./images/photo_3.jpg" alt="Camila Garcia" width="264" />
+              <img
+                src="./images/photo_3.jpg"
+                srcset="./images/photo_3.jpg 1x, ./images/photo_3_x2.jpg 2x"
+                alt="Camila Garcia"
+                width="264"
+              />
               <div class="team-card-content">
                 <h3 class="title">Camila Garcia</h3>
                 <p class="team-desc">Marketing</p>
@@ -281,7 +366,12 @@
               </div>
             </li>
             <li class="team-card">
-              <img src="./images/photo_4.jpg" alt="Daniel Wilson" width="264" />
+              <img
+                src="./images/photo_4.jpg"
+                srcset="./images/photo_4.jpg 1x, ./images/photo_4_x2.jpg 2x"
+                alt="Daniel Wilson"
+                width="264"
+              />
               <div class="team-card-content">
                 <h3 class="title">Daniel Wilson</h3>
                 <p class="team-desc">UI Designer</p>
@@ -343,7 +433,12 @@
           <ul class="portfolio-list">
             <li class="portfolio-card">
               <div class="portfolio-image-wrap">
-                <img src="./images/img-5.jpg" alt="Banking App" width="360" />
+                <img
+                  src="./images/img-5.jpg"
+                  srcset="./images/img-5.jpg 1x, ./images/img-5_x2.jpg 2x"
+                  alt="Banking App"
+                  width="360"
+                />
                 <p class="portfolio-card-info">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -359,6 +454,7 @@
               <div class="portfolio-image-wrap">
                 <img
                   src="./images/img-4.jpg"
+                  srcset="./images/img-4.jpg 1x, ./images/img-4_x2.jpg 2x"
                   alt="Cashless Payment"
                   width="360"
                 />
@@ -377,6 +473,7 @@
               <div class="portfolio-image-wrap">
                 <img
                   src="./images/img-3.jpg"
+                  srcset="./images/img-3.jpg 1x, ./images/img-3_x2.jpg 2x"
                   alt="Meditation App"
                   width="360"
                 />
@@ -393,7 +490,12 @@
             </li>
             <li class="portfolio-card">
               <div class="portfolio-image-wrap">
-                <img src="./images/img-2.jpg" alt="Taxi Service" width="360" />
+                <img
+                  src="./images/img-2.jpg"
+                  srcset="./images/img-2.jpg 1x, ./images/img-2_x2.jpg 2x"
+                  alt="Taxi Service"
+                  width="360"
+                />
                 <p class="portfolio-card-info">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -409,6 +511,7 @@
               <div class="portfolio-image-wrap">
                 <img
                   src="./images/img-1.jpg"
+                  srcset="./images/img-1.jpg 1x, ./images/img-1_x2.jpg 2x"
                   alt="Screen Illustrations"
                   width="360"
                 />
@@ -425,7 +528,12 @@
             </li>
             <li class="portfolio-card">
               <div class="portfolio-image-wrap">
-                <img src="./images/img.jpg" alt="Online Courses" width="360" />
+                <img
+                  src="./images/img.jpg"
+                  srcset="./images/img.jpg 1x, ./images/img_x2.jpg 2x"
+                  alt="Online Courses"
+                  width="360"
+                />
                 <p class="portfolio-card-info">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -508,7 +616,7 @@
         </div>
       </div>
     </footer>
-    <div class="overlay is-open">
+    <div class="overlay">
       <div class="form-modal">
         <button type="button" class="form-close-button">
           <svg width="8" height="8" class="btn-close-icon">
@@ -599,5 +707,61 @@
         </form>
       </div>
     </div>
+    <script>
+      (function () {
+        const header = document.querySelector('.header');
+
+        // Mobile menu
+        const mobileMenu = document.querySelector('.mobile-menu');
+        const menuButton = document.querySelector('.btn-menu');
+        const menuCloseButton = document.querySelector('.menu-close-button');
+        menuButton.addEventListener('click', () => {
+          mobileMenu.classList.add('is-open');
+        });
+
+        menuCloseButton.addEventListener('click', () => {
+          mobileMenu.classList.remove('is-open');
+        });
+
+        // Contacts form
+        function removeActiveClass() {
+          const links = header.querySelectorAll('.nav-link');
+          links.forEach(link => {
+            link.classList.remove('active');
+          });
+        }
+
+        header.addEventListener('click', evt => {
+          const elem = evt.target;
+          if (elem.classList.contains('nav-link')) {
+            removeActiveClass();
+            evt.preventDefault();
+            const id = elem.getAttribute('href').split('#')[1];
+            elem.classList.add('active');
+            if (id) {
+              const element = document.getElementById(id);
+              if (element) {
+                element.scrollIntoView({
+                  behavior: 'smooth',
+                  block: 'start',
+                });
+              }
+            }
+          }
+        });
+
+        const overlay = document.querySelector('.overlay');
+        const openButton = document.querySelector('.btn-service');
+        const closeButton = document.querySelector('.form-close-button');
+
+        openButton.addEventListener('click', () => {
+          overlay.classList.add('is-open');
+        });
+
+        closeButton.addEventListener('click', () => {
+          overlay.classList.remove('is-open');
+        });
+      })();
+    </script>
   </body>
 </html>
